--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:js": "webpack --watch",
     "build:js": "webpack",
+    "dev": "npm run watch:js & npm start",
     "postinstall": "cp node_modules/jquery/dist/jquery.js lib/ && cp node_modules/normalize.css/normalize.css lib/"
   },
   "author": "",
@@ -15,6 +16,7 @@
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
     "eventemitter3": "^2.0.2",
     "jquery": "^3.1.1",
     "normalize.css": "^5.0.0",
