--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch:js": "webpack --watch",
     "build:js": "webpack",
     "dev": "npm run watch:js & npm start",
-    "postinstall": "cp node_modules/jquery/dist/jquery.js lib/ && cp node_modules/normalize.css/normalize.css lib/"
+    "postinstall": "cp node_modules/normalize.css/normalize.css lib/"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-router": "^3.0.0",
     "webpack": "^1.13.3"
   }
 }
