--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:js": "webpack --watch",
     "build:js": "webpack",
-    "dev": "npm run watch:js & npm start",
+    "css": "node-sass src/scss/main.scss -o dist",
+    "watch:css": "node-sass src/scss/main.scss -wo dist",
+    "dev": "npm run watch:js & npm run watch:css & npm start",
     "postinstall": "cp node_modules/normalize.css/normalize.css lib/"
   },
   "author": "",
@@ -22,6 +24,7 @@
     "jquery": "^3.1.1",
     "lodash": "^4.16.6",
     "lowdb": "^0.14.0",
+    "node-sass": "^3.13.0",
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
